# birl_baxter

./: README.md
birl_demos/ein_demo/: Readme.txt  f_story.back
birl_demos/pivotApproach/pa_demo/launch/: pa.launch
birl_demos/pivotApproach/pa_demo/scripts/pa_demo/: arm_action.py  pa_manipulation.py
src/birl_demos/: README
src/birl_demos/pick_n_place_demo/pa_demo/scripts/pa_demo/: #pa_manipulation.py#  .#pa_manipulation.py  pa_manipulation.py
src/birl_recorded_motions/: package.xml
src/birl_vision/linemod/cv_bridge3/: CMakeLists.txt
